// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with new data 1`] = `
<styled.span>
  <Suggestion
    className=""
    fixes={
      Object {
        "add": Array [
          Object {
            "k": "leisure",
            "v": "pitch",
          },
          Object {
            "k": "source",
            "v": "data.gouv.fr:Le ministère des droits des femmes, de la ville, de la jeunesse et des sports - 11/2015",
          },
          Object {
            "k": "sport",
            "v": "volleyball",
          },
          Object {
            "k": "surface",
            "v": "asphalt",
          },
        ],
        "del": Array [],
        "mod": Array [],
        "num": 0,
      }
    }
    handleClick={null}
    key=".0"
    number={null}
    osm={null}
    title=""
    type="MODIFICATION"
  >
    <div />
  </Suggestion>
</styled.span>
`;

exports[`When using snapshots Should render with no tags or fixes 1`] = `
<styled.span>
  <Suggestion
    className=""
    fixes={null}
    handleClick={null}
    key=".0"
    number={null}
    osm={null}
    title=""
    type="MODIFICATION"
  >
    <div />
  </Suggestion>
</styled.span>
`;

exports[`When using snapshots Should render with only osm 1`] = `
<styled.span>
  <Suggestion
    className=""
    fixes={null}
    handleClick={null}
    key=".0"
    number={null}
    osm={
      Array [
        Object {
          "k": "amenity",
          "v": "school",
        },
        Object {
          "k": "name",
          "v": "Collège Maurice SATINEAU",
        },
      ]
    }
    title=""
    type="MODIFICATION"
  >
    <div />
  </Suggestion>
</styled.span>
`;

exports[`When using snapshots Should render with osm fixable data  1`] = `
<styled.span>
  <Suggestion
    className=""
    fixes={
      Object {
        "add": Array [
          Object {
            "k": "ref:UAI",
            "v": "9710194J",
            "vlink": "http://www.education.gouv.fr/pid24302/annuaire-resultat-recherche.html?lycee_name=9710194J",
          },
          Object {
            "k": "school:FR",
            "v": "primaire",
          },
          Object {
            "k": "source",
            "v": "data.gouv.fr:Éducation Nationale - 05/2016",
          },
        ],
        "del": Array [],
        "mod": Array [],
        "num": 0,
      }
    }
    handleClick={null}
    key=".0"
    number={null}
    osm={null}
    title=""
    type="MODIFICATION"
  >
    <div />
  </Suggestion>
</styled.span>
`;
